# easy_lance_backend

./: .gitignore  Cargo.toml  README.md  example.env
migrations/: 20230723221423_initial.down.sql  20230723221423_initial.sql  20230723221423_initial.up.sql
src/: lib.rs  main.rs
src/api/: errors.rs  job.rs  job_rate_curves.rs  job_rates.rs  job_type.rs  job_types.rs  jobs.rs  mod.rs  routes.rs  summary.rs  users.rs  utils.rs
src/api/job/: routes.rs
src/app/: mod.rs  routes.rs
src/app/animals/: routes.rs
src/auth/: jwt_configuration.rs  mod.rs  token.rs  user_identity.rs
src/dtos/: job_dto.rs  job_rate_curve_dto.rs  job_rate_dto.rs  job_type_dto.rs  mod.rs  token_dto.rs  user_login_dto.rs  user_register_dto.rs
src/dtos/summary/: mod.rs  summary_category_total.rs
src/entity/: job.rs  job_rate.rs  job_rate_curve.rs  job_type.rs  mod.rs  traits.rs  user.rs
src/models/: job_model.rs  job_rate_model.rs  job_type_model.rs  mod.rs
src/models/summary/: CategoryTotalModel.rs  mod.rs
src/repository/: errors.rs  job_rate_curve_repository.rs  job_rate_repository.rs  job_rates_repository.rs  job_repository.rs  job_type_repository.rs  mod.rs  user_repository.rs
src/service/: errors.rs  job_service.rs  mod.rs
