[package]
name = "easy_lance"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
argon2 = "0.5.1"
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
jsonwebtoken = "8.3.0"
log = "0.4.17"
serde = { version = "1.0.174", features = ["derive"] }
serde_json = "1.0.103"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio", "chrono"] }
thiserror = "1.0.44"
