[package]
name = "easy_lance"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
argon2 = "0.5.1"
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
jsonwebtoken = "8.3.0"
log = "0.4.20"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
sqlx = { version = "0.7.1", features = ["postgres", "runtime-tokio", "chrono", "bigdecimal"] }
thiserror = "1.0.44"
bigdecimal = { version = "0.3.0", features = ["serde"] }
actix-cors = "0.6.4"
tokio = { version = "1.31.0", features = ["macros"] }
futures = "0.3.28"
